<resources>
    <string name="app_name">My Charlotte</string>
    <string name="homepage">Where would you like to start?</string>

    <string name="first_button">Browse Events</string>
    <string name="second_button">View Map</string>
    <string name="third_button">My Calender</string>
    <string name="fourth_button">City Info</string>

    <string name="title_activity_maps">Map</string>

    <string name="title_activity_city_info">City Info</string>
    <string name="weather_button">Weather</string>
    <string name="aw_button">Air/Water</string>
    <string name="traffic_button">Traffic</string>
    <string name="flights_button">Flights</string>
    <string name="br_button">Bus Routes</string>
    <string name="cu_button">Contact Us</string>

    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="calendar">Calendar</string>
    <string name="info">Info</string>
    <string name="title_activity_home_screen">Home Screen</string>
    <string name="title_activity_maps_screen">Map</string>

    <string name="event_1_text"><font size="20">RapCaviarLive ft Migos...</font>\n\<font size="12">CMCU Amphitheatre - May 01</font></string>
    <string name="event_2_text"><font size="20">Charlotte Knights vs. ...</font>\n\<font size="12">BB&amp;T Ballpark - May 01</font></string>
    <string name="event_3_text"><font size="20">10 Years</font>\n\<font size="12">The Underground - May 01</font></string>
    <string name="event_4_text"><font size="20">Charlotte Knights vs. ...</font>\n\<font size="12">BB&amp;T Ballpark - May 01</font></string>
    <string name="event_5_text"><font size="20">Billy Loves Bobby Sue</font>\n\<font size="12">NarroWay Theatre - May 02</font></string>
    <string name="event_6_text"><font size="20">Charlotte Hounds vs. ...</font>\n\<font size="12">American Legion Memorial Stadium - May 03</font></string>

    <color name="white">#FFFFFF</color>

</resources>