<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/infobg"
    tools:context=".InfoScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="62dp"
        android:text="Events"
        android:textColor="@android:color/black"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/button1"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/music_icon"
        android:fontFamily="@font/sanchez"
        android:text="@string/event_1_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/sports_icon"
        android:fontFamily="@font/sanchez"
        android:text="@string/event_2_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/music_icon"
        android:fontFamily="@font/sanchez"
        android:text="@string/event_3_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/sports_icon"
        android:fontFamily="@font/sanchez"
        android:text="@string/event_4_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/music_icon"
        android:fontFamily="@font/sanchez"
        android:text="@string/event_5_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/sports_icon"
        android:fontFamily="@font/sanchez"
        android:text="@string/event_6_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />
</android.support.constraint.ConstraintLayout>
