<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hscreen"
    tools:context=".HomeScreen">

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="335dp"
        android:layout_height="120dp"
        android:text="@string/homepage"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="41sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/button"
        android:layout_width="171dp"
        android:layout_height="75dp"
        android:background="@drawable/homebutton"
        android:text="@string/first_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:fontFamily="@font/acme"
        android:onClick="send_EventsScreen"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="171dp"
        android:layout_height="75dp"
        android:background="@drawable/homebutton"
        android:text="@string/second_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:fontFamily="@font/acme"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="171dp"
        android:layout_height="75dp"
        android:background="@drawable/homebutton"
        android:text="@string/third_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:fontFamily="@font/acme"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="171dp"
        android:layout_height="75dp"
        android:background="@drawable/homebutton"
        android:text="@string/fourth_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:fontFamily="@font/acme"
        android:onClick="send_InfoScreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
</android.support.constraint.ConstraintLayout>